# frost

./: !errout  .gitignore  .zsh-src  3  CLAUDE.md  Cargo.nix  Cargo.toml  DECISIONS.md  README.md  autoload_redir  crate-hashes.json  flake.nix  fnfile  functst  link  regex_test.sh  result  test_bad_param  xt.in  xtrace.err
.cargo/: config.toml
crates/frost/: Cargo.toml  oops  p  source_comments.zsh  until_dot
crates/frost-builtins/: Cargo.toml
crates/frost-builtins/src/: cd.rs  colon.rs  command.rs  control.rs  echo.rs  eval.rs  eval_builtin.rs  exit.rs  export.rs  getopts.rs  hash.rs  jobs.rs  kill.rs  lib.rs  misc.rs  print.rs  read.rs  read_builtin.rs  readonly.rs  return_builtin.rs  set.rs  setopt.rs  source.rs  stubs.rs  test.rs  test_builtin.rs  true_false.rs  typeset.rs  unset.rs  whence.rs
crates/frost-compat/: Cargo.toml
crates/frost-compat/src/: lib.rs  main.rs  runner.rs  ztst.rs
crates/frost-complete/: Cargo.toml
crates/frost-complete/src/: forge.rs  lib.rs  tree.rs
crates/frost-exec/: Cargo.toml
crates/frost-exec/src/: arith.rs  env.rs  execute.rs  job.rs  lib.rs  redirect.rs  sys.rs  trap.rs
crates/frost-expand/: Cargo.toml
crates/frost-expand/src/: lib.rs
crates/frost-glob/: Cargo.toml
crates/frost-glob/src/: lib.rs
crates/frost-history/: Cargo.toml
crates/frost-history/src/: lib.rs
crates/frost-lexer/: Cargo.toml
crates/frost-lexer/src/: cursor.rs  lexer.rs  lib.rs  token.rs
crates/frost-lisp/: Cargo.toml
crates/frost-lisp/examples/: rc.lisp
crates/frost-lisp/src/: abbr.rs  alias.rs  bind.rs  compcomp.rs  completion.rs  env.rs  function.rs  history.rs  hook.rs  integration.rs  lib.rs  mark.rs  notify.rs  option.rs  path.rs  picker.rs  prompt.rs  source.rs  theme.rs  trap.rs
crates/frost-options/: Cargo.toml
crates/frost-options/src/: lib.rs
crates/frost-parser/: Cargo.toml
crates/frost-parser/src/: ast.rs  parser.rs
crates/frost-prompt/: Cargo.toml
crates/frost-prompt/src/: lib.rs
crates/frost-spec/: Cargo.toml
crates/frost-spec/examples/: compile_doc.rs
crates/frost-spec/src/: builtin.rs  lib.rs  option.rs
crates/frost-spec/tests/: registry.rs
crates/frost-verify/: Cargo.toml
crates/frost-verify/src/: lib.rs  main.rs  manifest.rs  merkle.rs  trace.rs  verify.rs
crates/frost-zle/: Cargo.toml
crates/frost-zle/src/: highlight.rs  lib.rs
crates/frost/src/: main.rs
crates/frost/tests/: frostmourne_rc.rs  integration.rs  zsh_compat.rs  ztst_bridge.rs
crates/frost/tests/fixtures/: frostmourne-rc.lisp
docs/: architecture.md  builtins.md
extra2/: fun2a  fun2b
tests/zsh-suite/: VERSION
zdotdir/: .zshenv
