[package]
name = "frost-builtins"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Built-in shell commands for frost"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
