[package]
name = "frost-complete"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zsh completion system"

[dependencies]
frost-zle = { workspace = true }
frost-lisp = { workspace = true }
frost-options = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
reedline = "0.42"

[[bin]]
name = "frost-complete-forge"
path = "src/bin/forge.rs"

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
