[package]
name = "frost-expand"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zsh-compatible word expansion engine"

[dependencies]
frost-lexer = { workspace = true }
thiserror = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
