[package]
name = "frost-glob"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zsh-compatible globbing with extended globs and qualifiers"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
