[package]
name = "frost-verify"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Verifiable shell configuration loading for frost/zsh"

[[bin]]
name = "frost-verify"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
tempfile = "3"
