[package]
name = "frost-zle"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zsh Line Editor (ZLE)"

[dependencies]
frost-options = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
reedline = "0.42"

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
