[package]
name = "frost"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A zsh-compatible shell written in Rust"

[[bin]]
name = "frost"
path = "src/main.rs"

[dependencies]
frost-lexer = { workspace = true }
frost-parser = { workspace = true }
frost-exec = { workspace = true }
frost-builtins = { workspace = true }
frost-options = { workspace = true }
frost-zle = { workspace = true }
frost-complete = { workspace = true }
frost-prompt = { workspace = true }
frost-history = { workspace = true }
frost-lisp = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
frost-compat = { path = "../frost-compat" }
reedline = "0.42"
